<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:inputType="textCapWords"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/sign_up_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"/>


</LinearLayout>